--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,13 +2,19 @@
 # http://symfony.com/doc/current/security.html
 security:
 
-    # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
+    encoders:
+        FOS\UserBundle\Model\UserInterface: sha512
+
+    role_hierarchy:
+        ROLE_USER:        [ROLE_USER]
+        ROLE_ADMIN:       [ROLE_ADMIN]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
     providers:
-        in_memory:
-            memory: ~
+        fos_userbundle:
+            id: fos_user.user_provider.username_email
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -22,3 +28,25 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+        
+        # login area for backoffice users
+        backoffice:
+            context: primary_auth
+            pattern:            ^/backoffice
+            form_login:
+                provider:       fos_userbundle
+                login_path:     course_back_office_security_login
+                use_forward:    true
+                use_referer:    true
+                check_path:     course_back_office_security_check
+                failure_path:   course_back_office_security_login
+                default_target_path: course_back_office_homepage
+            logout:
+                path: course_back_office_security_logout
+                target: course_cms_bundle_homepage
+            anonymous:    true
+
+    access_control:
+            # back-office
+            - { path: ^/backoffice/connexion, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/backoffice, roles: ROLE_ADMIN }
